-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b86
-
b32
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8014592 | 8 | Jon Masamitsu | P3 | Resolved | Fixed | b90 |
Running: JDK8-b86/bin/java -XX:+UseConcMarkSweepGC -XX:-UseCMSCompactAtFullCollection SystemGC
public class SystemGC {
public static void main(String [] args) {
while (true) {
System.gc();
}
}
}
triggers this assert:
# Internal Error (/HUDSON/workspace/2-build-linux-amd64/jdk8/4052/hotspot/src/share/vm/gc_implementation/concurrentMarkSweep/concurrentMarkSweepGeneration.cpp:931), pid=15212, tid=140225625880320
# assert(used() == used_after_gc && used_after_gc <= capacity()) failed: used: 0 used_after_gc: 292080 capacity: 1431699456
This assert was introduced with this change:
changeset: 4450:8617e38bb4cb
user: jmasa
date: Mon Feb 11 10:31:56 2013 -0800
summary: 8008508: CMS does not correctly reduce heap size after a Full GC
public class SystemGC {
public static void main(String [] args) {
while (true) {
System.gc();
}
}
}
triggers this assert:
# Internal Error (/HUDSON/workspace/2-build-linux-amd64/jdk8/4052/hotspot/src/share/vm/gc_implementation/concurrentMarkSweep/concurrentMarkSweepGeneration.cpp:931), pid=15212, tid=140225625880320
# assert(used() == used_after_gc && used_after_gc <= capacity()) failed: used: 0 used_after_gc: 292080 capacity: 1431699456
This assert was introduced with this change:
changeset: 4450:8617e38bb4cb
user: jmasa
date: Mon Feb 11 10:31:56 2013 -0800
summary: 8008508: CMS does not correctly reduce heap size after a Full GC
- backported by
-
JDK-8014592 CMS: assert(used() == used_after_gc && used_after_gc <= capacity()) failed: used: 0 used_after_gc: 292080 capacity: 1431699456
-
- Resolved
-